@@ -2,6 +2,12 @@ ChangeLog
 
 Name: William Lai
 Date: 12-23-2013
+Description: Bug fixes
+    * src/chess/HumanPlayer.java: Fixed bug that made it impossible for player to make a capture.
+    * src/chess/StandardChessBoard.java: Fixed bug that made it possible for a pawn to move two squares if a friendly pawn is threatening the same square (credit to Eric (edu5) for finding bug).
+
+Name: William Lai
+Date: 12-23-2013
 Description: Cleaned up code, removed Piece class and subclasses, AI now much faster (on the order of 10x)
     * REMOVED Bishop.java, King.java, Knight.java, Pawn.java, Piece.java, Queen.java, Rook.java
     * src/chess/Board.java: Stripped down to bare bones. May add some more functionality back when variants are made
